<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".Auth.RegisterActivity">


    <TextView
        android:id="@+id/signin_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/title_signup"
        android:textColor="@color/dark_grey"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_link"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_signup"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.016" />

    <EditText
        android:id="@+id/e_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextborder"
        android:drawableRight="@drawable/ic_baseline_perm_identity_24"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColorHint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.078" />

    <EditText
        android:id="@+id/e_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextborder"
        android:drawableRight="@drawable/ic_baseline_mail_outline_24"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColorHint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_fullname"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/e_contactno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextborder"
        android:drawableRight="@drawable/ic_baseline_phone_android_24"
        android:hint="@string/contactno"
        android:inputType="phone"
        android:padding="15dp"
        android:textColorHint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_email"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/e_pincode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextborder"
        android:hint="@string/pincode"
        android:padding="15dp"
        android:textColorHint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_address"
        app:layout_constraintVertical_bias="0.109" />

    <EditText
        android:id="@+id/e_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:background="@drawable/edittextborder"
        android:drawablePadding="0dp"
        android:ems="3"
        android:drawableRight="@drawable/ic_outline_location_on_24"
        android:textColorHint="@color/light_grey"
        android:gravity="top"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_contactno"
        app:layout_constraintVertical_bias="0.007" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/yellow_rounded_button"
        android:padding="15dp"
        android:text="@string/continued"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_pincode"
        app:layout_constraintVertical_bias="0.515" />

</androidx.constraintlayout.widget.ConstraintLayout>