<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.Register2Activity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imgpass1"
        android:textColor="@color/dark_grey"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="592dp"
        android:text="@string/imgpass2"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/e_image"
        android:layout_width="122dp"
        android:layout_height="118dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293"
        app:srcCompat="@drawable/profile_pic_border" />

    <EditText
        android:id="@+id/e_companyname"
        android:layout_width="370dp"
        android:layout_height="73dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/edittextborder"
        android:drawableRight="@drawable/ic_baseline_apartment_24"
        android:hint="@string/company_name"
        android:padding="20dp"
        android:textColorHint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_image"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/e_password"
        android:layout_width="363dp"
        android:layout_height="70dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/edittextborder"
        android:drawableRight="@drawable/ic_baseline_visibility_24"
        android:hint="@string/password"
        android:padding="20dp"
        android:textColorHint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_companyname"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="159dp"
        android:layout_height="62dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/yellow_rounded_button"
        android:padding="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_password" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="175dp"
        android:layout_height="61dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/black_border"
        android:padding="20dp"
        android:text="@string/back"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_password"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>