<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/dialog_box_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Options"
            android:textColor="@color/dark_grey"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/cancel_option"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_outline_close_24"
            android:text="Cancel" />
    </RelativeLayout>


    <TextView
        android:id="@+id/stock_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_vertical_align_bottom_24"
        android:drawableRight="@drawable/arrow_size"

        android:drawablePadding="20dp"
        android:paddingVertical="15dp"
        android:text="@string/stock_in"
        android:textColor="@color/dark_grey"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/stock_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_vertical_align_top_24"
        android:drawableRight="@drawable/arrow_size"
        android:drawablePadding="20dp"
        android:paddingVertical="15dp"
        android:text="@string/stock_out"
        android:textColor="@color/dark_grey"
        android:textSize="18dp"/>

<!--    <TextView-->
<!--        android:id="@+id/stock_move"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:drawableLeft="@drawable/move"-->
<!--        android:drawableRight="@drawable/arrow_size"-->
<!--        android:drawablePadding="20dp"-->
<!--        android:paddingVertical="15dp"-->
<!--        android:text="@string/move"-->
<!--        android:textColor="@color/dark_grey"-->
<!--        android:textSize="18dp"/>-->

    <TextView
        android:id="@+id/audit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/two_arrows"
        android:drawableRight="@drawable/arrow_size"
        android:drawablePadding="20dp"
        android:paddingVertical="15dp"
        android:text="@string/audit"
        android:textColor="@color/dark_grey"
        android:textSize="18dp"/>

</LinearLayout>