<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BottomNavigationBar.StockFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock"
            android:textSize="24sp"
            android:textStyle="bold"/>

            <ImageView
                android:id="@+id/add_stocks"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginLeft="200dp"
                android:src="@drawable/ic_baseline_add_24" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/default_grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/button_border"
                android:drawableLeft="@drawable/ic_outline_tune_24"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:text="@string/filter"
                android:textAllCaps="false"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_border"
                android:drawableLeft="@drawable/ic_baseline_sort_24"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:text="@string/sort"
                android:textAllCaps="false"
                android:textSize="20dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/default_grey"/>

        <ListView
            android:id="@+id/StockListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:scrollbars="vertical"/>
    </LinearLayout>
</FrameLayout>