<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="105dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="548dp"
        android:text="@string/app_name"
        android:textColor="#1E1E1E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="363dp"
        android:layout_height="295dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="220dp"
        android:src="@drawable/park"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="342dp"
        android:layout_height="57dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/button_border"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="342dp"
        android:layout_height="53dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="68dp"
        android:background="@color/yellow"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>